crates/vespertide-exporter/src/django/snapshots/vespertide_exporter__django__tests__indexes_and_composite_unique.snap
---
source: crates/vespertide-exporter/src/django/mod.rs
assertion_line: 252
expression: render_entity(&table).unwrap()
---
from __future__ import annotations

from django.db import models


class Articles(models.Model):
    id = models.AutoField(primary_key=True)
    slug = models.CharField(max_length=200)
    author_id = models.IntegerField()
    created_at = models.DateTimeField()

    class Meta:
        db_table = "articles"
        indexes = [
            models.Index(fields=["created_at"], name="ix_articles__created_at"),
        ]
        constraints = [
            models.UniqueConstraint(fields=["slug", "author_id"], name="uq_articles__slug_author"),
        ]
