crates/vespertide-exporter/src/django/snapshots/vespertide_exporter__django__tests__server_default_timezone.snap
---
source: crates/vespertide-exporter/src/django/mod.rs
assertion_line: 286
expression: result
---
from __future__ import annotations

from django.utils import timezone
from django.db import models


class Events(models.Model):
    id = models.AutoField(primary_key=True)
    created_at = models.DateTimeField(default=timezone.now)
    count = models.IntegerField(default=0)

    class Meta:
        db_table = "events"
