crates/vespertide-exporter/src/django/snapshots/vespertide_exporter__django__tests__table_with_fk.snap
---
source: crates/vespertide-exporter/src/django/mod.rs
assertion_line: 128
expression: render_entity(&table).unwrap()
---
from __future__ import annotations

from django.db import models


class Posts(models.Model):
    id = models.AutoField(primary_key=True)
    author = models.ForeignKey("Users", on_delete=models.CASCADE, related_name="+")
    title = models.TextField()

    class Meta:
        db_table = "posts"
